--- a/views/lookup.ejs
+++ b/views/lookup.ejs
@@ -11,7 +11,7 @@
                         <tr>
                             <% Object.values(table[0]).forEach(function (key) { %>
                                 <th style="border: 2px solid black; padding: 15px;text-align: center;">
-                                    <%= key %> <span onclick="sortTable()"><i class="fa-solid fa-sort"></i></span>
+                                    <%= key %>
                                 </th>
                                 <% }) %>
                         </tr>
